# dsch-if-POC-2

./: .gitignore  README.md  config_aidi.yaml  config_aidi_guide.md  groupchat_history.txt  pyproject.toml
.github/workflows/: checks.yml  dev.yml  prod.yaml  prod.yml
MAS_Examples/: MAS_Coding_Data_Tranlsation.ipynb  MAS_PlannerDataTranslation.ipynb  MAS_agentchat_teachability.ipynb  MAS_react with Memory.ipynb  MAS_react.ipynb  MAS_task_decomposition-Autobuild-method.ipynb  MAS_task_decomposition-Gruoup-Chat.ipynb  MAS_task_decomposition-Two-agent chat with function call for task decomposition.ipynb  MAS_tool_use-calculate_mass.ipynb  MAS_tool_use-unit_conversion.ipynb  README.md  autogen_custom_agent_structured_output_task_decomposition_data_translation.ipynb  data_extraction_structured_tabular_output_instructor.ipynb  task_decomposition_instructor_planner_1_arithmetic.ipynb  task_decomposition_instructor_planner_1_construction_elements.ipynb  task_decomposition_instructor_planner_1_data_translation.ipynb
aidi/: __init__.py  __main__.py  aidi.py  config.py  config_aidi.yaml  generic_logger.py  mas.py  translation_data_ingest.py  translationdata.py  utils.py  validation.py
data/data1/: source_data.json  source_data_sample1.json  source_data_sample2.json  source_ontology.ttl  source_schema.json  target_data.json  target_data_sample1.json  target_data_sample2.json  target_ontology.ttl  target_schema.json  target_schema_dummy.json
data/data2/: source_data.json  source_schema.json  target_data.json  target_schema.json
docs/: aidi.html  index.html  search.js
docs/aidi/: aidi.html  config.html  generic_logger.html  mas.html  translation_data_ingest.html  translationdata.html  utils.html  validation.html
gui/: ifdemo2.py
tests/: test_config.py  test_generic_logger.py  test_mas.py  test_translation_data_ingest.py  test_translationdata.py
translation_folder/: generated_target_data.json  program_generated_by_AI.py
